# binarysort

./: .dockerignore  .gitignore  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  PERFORMANCE_50M.md  README.md  RELEASE_NOTES.md  SUMMARY.md  TEST_REPORT.md  build.sh  design_document_fixed_record_binary_sort_utility.md  dockerbuild.bat  dockerbuild.sh
.github/workflows/: release.yml
docker/: Dockerfile.linux  Dockerfile.macos-cross  Dockerfile.windows  README.md
docker/sdk/: .gitkeep
include/: argument_parser.hpp  comparison_generator.hpp  file_operations.hpp  memory_mapper.hpp  record.hpp  sort_engine.hpp
src/: argument_parser.cpp  comparison_generator.cpp  file_operations.cpp  main.cpp  memory_mapper.cpp  memory_mapper_unix.cpp  memory_mapper_windows.cpp  record.cpp  sort_engine.cpp
tests/: create_test_data.cpp  test_comparison.cpp  test_endianness.cpp  test_main.cpp  test_memory_mapper.cpp  verify_sorted.cpp
